--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "@astrojs/mdx": "^4.3.0",
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.4.1",
+    "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.11.0",
-    "sharp": "^0.34.2"
+    "sharp": "^0.34.2",
+    "tailwindcss": "^4.1.11"
+  },
+  "devDependencies": {
+    "@iconify/json": "^2.2.357",
+    "@iconify/tailwind4": "^1.0.6"
   }
 }
